log in and sign up fixed

--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -42,4 +42,6 @@
     border: 1px solid white;
     background: gray;
     width: fit-content;
+    /* display: flex; */
+    flex-direction: row;
 }
