--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,6 +1,7 @@
 
 * {
     margin: 0px 0px;
+    /* background-color: lightgray; */
 }
 
 
@@ -10,11 +11,13 @@
     justify-content: center;
     align-items: center;
     border: 1px solid;
-    background-color: #ff2058;
+    background-color: lightgray;
     max-width: 550px;
     margin: auto;
     margin-top: 10rem;
     flex-direction: column;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
+        0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .inputTag input {
@@ -23,25 +26,31 @@
     margin: 2px 2px;
 }
 
-/* .username {
-    margin: 2px 2px;
-}
-
-.password {
-    margin: 2px 2px;
-} */
 .password input {
     margin-left: 5px;
 }
+
 
 .submitBtn input {
     margin-top: 10px;
     margin-left: 45%;
     border-radius: 5px;
     cursor: pointer;
-    border: 1px solid white;
-    background: gray;
+    border: 2px solid white;
+    /* background: white; */
     width: fit-content;
     /* display: flex; */
     flex-direction: row;
+}
+
+.submitBtn {
+    /* background-color: white; */
+}
+
+.username {
+    /* background-color: white; */
+}
+
+.password {
+    /* background-color: white; */
 }
